alteração da nav e do footer

--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -2,10 +2,42 @@ body{
     background-color: rgba(219, 215, 215, 0.432);
 }
 
+.img1{
+    width: 300px;
+    height: 125px;
+}
 
-.carousel-inner{
+.navbar{
+
     
 }
+
+.navbar-list{
+    list-style-type:none;
+    padding:0;
+    margin:0;
+}
+
+.navbar-list li{
+    display: inline;
+    margin-right: 20px;
+    
+}
+
+.navbar-list li a {
+    text-decoration: none;
+    color: rgb(4, 4, 5); /* Cor do texto dos links */
+    font-weight: bold;
+}
+
+.efeito:hover{
+    color: rgb(49, 15, 201);
+    border-bottom: 3px solid;
+
+}
+
+
+
 .carousel-caption h5{
     height: 100px;
     text-align: left;
@@ -14,7 +46,15 @@ body{
 }
 
 .carousel-caption p{
-    height:400px;
+    height:300px;
+}
+
+#carouselExampleIndicators{
+      margin-bottom: 50px;
+}
+
+.conteiner{
+    margin-bottom: 100px;
 }
 
 footer{
@@ -22,6 +62,9 @@ footer{
     height: 110px;
     text-align: center;
     padding: 20px;
-    background-color: rgb(215, 226, 226);  
+    background-color: #0d2240;
 }
 
+footer a i{
+    margin-right: 20px;
+}
