--- a/styles/style.css
+++ b/styles/style.css
@@ -2,26 +2,28 @@ body{
     background-color: rgba(219, 215, 215, 0.432);
 }
 
+
 .img1{
     width: 300px;
     height: 125px;
+    
 }
 
-.navbar{
-
-    
+.card{
+    margin-bottom: 30px;
+    padding-bottom: 20px;
 }
 
 .navbar-list{
     list-style-type:none;
     padding:0;
     margin:0;
+    
 }
 
 .navbar-list li{
     display: inline;
-    margin-right: 20px;
-    
+    margin-right: 20px;  
 }
 
 .navbar-list li a {
@@ -35,26 +37,16 @@ body{
     border-bottom: 3px solid;
 
 }
-
-
-
-.carousel-caption h5{
-    height: 100px;
-    text-align: left;
-
+/*estilo do carrosel*/
+#carouselExampleIndicators{
+    margin-bottom: 50px;   
    
 }
 
-.carousel-caption p{
-    height:300px;
-}
-
-#carouselExampleIndicators{
-      margin-bottom: 50px;
-}
-
-.conteiner{
-    margin-bottom: 100px;
+.d-block{
+    height:600px;
+    width: 100%;
+    
 }
 
 footer{
@@ -67,4 +59,15 @@ footer{
 
 footer a i{
     margin-right: 20px;
+}
+
+@media (min-width:300px) and (max-width:720px){
+    
+    .d-block{
+        height:40%;
+        object-fit: cover;
+    }
+    
+    
+
 }
