--- a/src/styles/estilo.css
+++ b/src/styles/estilo.css
@@ -1,27 +1,50 @@
-.navbar {
-  background-color: #dbd7d76e;
+header{
+  background-color: rgb(241, 240, 240);
 }
-
-.img1 {
+/*logo*/
+.logo{
   width: 300px;
-  height: 125px;
+  height:auto;
+  margin-top: 20px;
 }
 
-.navbar-list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+.logo-mobile {
+  display: none;
 }
 
-.navbar-list li {
-  display: inline;
-  margin-right: 20px;
+/*Barra de navegação*/
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  padding: 1.5rem 6rem;
 }
 
-.navbar-list li a {
+.nav-list ul {
+  display: flex;
+  margin-top: 10%;
+  justify-content: center;
+
+  list-style: none;
+}
+
+.nav-item {
+  margin: 0 15px;
+}
+
+.nav-link {
   text-decoration: none;
-  color: rgb(4, 4, 5); /* Cor do texto dos links */
-  font-weight: bold;
+  font-size: 1.15rem;
+  font-family: "Nunito", sans-serif;
+  color: rgb(0, 0, 0);
+  font-weight: 600;
+}
+
+.mobile-menu-icon {
+  display: none;
+}
+
+.mobile-menu {
+  display: none;
 }
 
 .efeito:hover {
@@ -37,23 +60,63 @@
 .carousel-caption p {
   height: 300px;
 }
-
+/*ajute finos do carrosel*/
 #carouselExampleIndicators {
   margin-bottom: 50px;
 }
-
-.conteiner {
-  margin-bottom: 100px;
-}
-
+/*estilização do roda pe*/
 footer {
   width: 100%;
   height: 110px;
   text-align: center;
   padding: 20px;
-  background-color: #0d2240;
+  background-color: #2b3b54;
+  margin-top: 40px;
 }
 
 footer a i {
   margin-right: 20px;
+}
+/*Responsividade para telas menores*/
+@media  (min-width:360px) and (max-width:780px) {
+  .nav-bar {
+    padding: 1.5rem 4rem;
+  }
+  .logo {
+    display: none;
+  }
+  .logo-mobile {
+    display: flex;
+    width: 200px;
+    height: auto;
+    margin-top: 10px;
+    margin-right: 20px;
+  }
+  .nav-item {
+    display: none;
+  }
+  .mobile-menu-icon {
+    display: block;
+  }
+  .mobile-menu-icon button {
+    background-color: transparent;
+    margin-top: 20px;
+    border: none;
+    cursor: pointer;
+  }
+  .mobile-menu ul {
+    display: flex;
+    width: 100%;
+    background: white;
+    flex-direction: column;
+    text-align: center;
+    padding-bottom: 1rem;
+  }
+  .mobile-menu .nav-item {
+    display: block;
+    padding-top: 1.2rem;
+  }
+  .open {
+    display: block;
+  }
 }
