--- a/src/styles/sobre.css
+++ b/src/styles/sobre.css
@@ -22,6 +22,8 @@ margin: 0%;
 .developers .developer-item .developer-img {
   inline-size: 90px;
   border-radius: 50%;
+  width: 100px;
+  height: 100px;
   margin: -40px 0 0 40px;
   position: relative;
   z-index: 2;
